--- a/SpaceRogueRevolution/Content/Site.css
+++ b/SpaceRogueRevolution/Content/Site.css
@@ -110,14 +110,7 @@ img {
     left: 0px;
 }
 
-.menu {
-    position: absolute;
-    top: 650px;
-    left:10px;
-    height: 50px;
-    z-index: 12;
-    padding:10px;
-}
+
 .titleDiv {
     font-family: 'Comic Sans MS';
     font-size: 20pt;
@@ -150,6 +143,14 @@ img {
     font-size: 8pt;
     z-index: 0;
 }
+
+.menu {
+    position: absolute;
+    top: 650px;
+    left:0px;
+    z-index: 12;
+}
+
 .HowToPlayDiv {
    position: absolute;
     top: 500px;
@@ -180,4 +181,12 @@ img {
     height: 700px;
     width: 500px;
     z-index:15;
+}
+.inputSibbling {
+    position: absolute;
+    top: 650px;
+    left: 0px;
+    background-color: #000066;
+    color: white;
+    z-index: 24;
 }
