--- a/SpaceRogueRevolution/Content/Site.css
+++ b/SpaceRogueRevolution/Content/Site.css
@@ -1,8 +1,8 @@
 ﻿body {
     font-size: .85em;
     font-family: 'Comic Sans MS';
-    color: #232323;
-    background-color: #666666;
+    color: #FFFFFF;
+    background-color: #000000;
 }
 
 header, footer, nav, section {
@@ -129,14 +129,14 @@ img {
     position: absolute;
     top: 500px;
     left: 0px;
-    background-color: #000066;
-    border:thick;
-    border-color:white;
+    border: thick;
+    border-color: white;
     color: white;
     height: 150px;
     width: 500px;
     font-size: 8pt;
-    z-index: 0;
+    z-index: 20;
+    background-color: #000000;
 }
 
 .menu {
@@ -148,16 +148,16 @@ img {
 
 .HowToPlayDiv {
    position: absolute;
+   background-color:black;
     top: 500px;
     left: 0px;
-    background-color: #000066;
     border:thick;
     border-color:white;
-    color: white;
+    color: yellow;
     height: 150px;
     width: 500px;
     font-size: 8pt;
-    z-index:10;
+    z-index:30;
 }
 .GameOverDiv {
     background-color:darkblue;
@@ -169,7 +169,8 @@ img {
     z-index:13;
 }
 .IntroGameDiv {
-    background-color:white;
+    background-color:black;
+    color:green;
     position: absolute;
     top: 0px;
     left: 0px;
